gnome-shell (3.31.90-1) UNRELEASED; urgency=medium

  [ Marco Trevisan (Treviño) ]
  * New upstream release
    - Don't fill journal with osdWindow errors (LP: #1772677)
    - Fix missing icon in keyboard indicator (LP: #1812266)

  [ Laurent Bigonville ]
  * debian/control.in: Recommends ibus, gnome-shell tried to start for years
    now, ibus is required to input emoji these days. (Closes: #815050)

  [ Marco Trevisan (Treviño) ]
  * d/p/Update-Basque-translation.patch,
    d/p/Update-Esperanto-translation.patch,
    d/p/Update-French-translation.patch,
    d/p/Update-Slovak-translation.patch,
    d/p/altSwitcher-Fix-error-when-all-alternatives-are-disabled.patch,
    d/p/dash-destroy-items-s-child-before-tooltip.patch,
    d/p/ibusManager-Don-t-pass-undefined-callback-to-ibus.patch,
    d/p/keyboard-Do-not-call-KeyboardManager.holdKeyboard-with-se.patch,
    d/p/panel-Don-t-allow-opening-hidden-menus-via-keybindings.patch,
    d/p/power-Label-the-PENDING_CHARGE-state-as-Not-Charging.patch,
    d/p/shellActionModes-disable-POPUP-keybindings-in-unlock-scre.patch,
    d/p/st-button-Ignore-pointer-emulated-touch-events.patch:
    - Dropped applied Upstream
  * d/p/tweener-Save-handlers-on-target-and-remove-them-on-destro.patch,
    d/p/workaround_crasher_fractional_scaling.patch:
    - Refreshed

 -- Marco Trevisan (Treviño) <marco@ubuntu.com>  Wed, 20 Feb 2019 16:37:57 +0100

gnome-shell (3.30.2-3) unstable; urgency=medium

  * Team upload
  * d/p/ibusManager-Don-t-pass-undefined-callback-to-ibus.patch:
    Mark as applied on upstream gnome-3-30 branch, and reorder earlier
    in the patch series
  * d/p/panel-Don-t-allow-opening-hidden-menus-via-keybindings.patch,
    d/p/shellActionModes-disable-POPUP-keybindings-in-unlock-scre.patch:
    Add patches from upstream to fix partial lock screen bypass
    (CVE-2019-3820, Closes: #921490)
  * Update patch series from gnome-3-30 branch, up to 3.30.2-11-ge23f4d6c7