@@ -20,8 +20,6 @@ Build-Depends: debhelper (>= 11.1.3),
                gtk-doc-tools,
                libasound2-dev,
                libatk-bridge2.0-dev,
-               libcanberra-dev,
-               libcanberra-gtk3-dev,
                libcroco3-dev (>= 0.6.8),
                libecal1.2-dev (>= 3.7.90),
                libedataserver1.2-dev (>= 3.17.2),
@@ -36,7 +34,7 @@ Build-Depends: debhelper (>= 11.1.3),
                libgstreamer1.0-dev (>= 0.11.92),
                libgtk-3-dev (>= 3.21.6),
                libibus-1.0-dev,
-               libmutter-3-dev (>= 3.30.0),
+               libmutter-4-dev (>= 3.31.4),
                libnm-dev (>= 1.10.4) [linux-any],
                libpolkit-agent-1-dev (>= 0.100),
                libpulse-dev (>= 2.0),
@@ -74,7 +72,7 @@ Depends: evolution-data-server (>= 3.17.2),
          gir1.2-gtk-3.0 (>= 3.16),
          gir1.2-gweather-3.0 (>= 3.25.91),
          gir1.2-ibus-1.0 (>= 1.5.2),
-         gir1.2-mutter-3 (>= 3.30.0),
+         gir1.2-mutter-4 (>= 3.31.4),
          gir1.2-nm-1.0 [linux-any],
          gir1.2-nma-1.0 [linux-any],
          gir1.2-pango-1.0,
@@ -88,7 +86,7 @@ Depends: evolution-data-server (>= 3.17.2),
          gnome-shell-common (= ${source:Version}),
          gsettings-desktop-schemas (>= 3.27.90),
          libglib2.0-bin (>= 2.53.0),
-         mutter (>= 3.30.0),
+         mutter (>= 3.31.4),
          python3,
          ${gir:Depends},
          ${misc:Depends},
