@@ -4,6 +4,9 @@ gnome-shell (3.31.90-1) UNRELEASED; urgency=medium
   * New upstream release
     - Don't fill journal with osdWindow errors (LP: #1772677)
     - Fix missing icon in keyboard indicator (LP: #1812266)
+  * debian/control:
+    - Update mutter dependency on mutter-4 3.31.4
+    - Drop dependencies on libcanberra and libcanberra-gtk3
 
   [ Laurent Bigonville ]
   * debian/control.in: Recommends ibus, gnome-shell tried to start for years
